esp-cloud/oauth2/templates/uaa.yaml
kind: Service
apiVersion: v1 
metadata:
  name: uaa-service
spec:
  selector:
    app: uaa
  ports:
    - protocol: TCP             # TCP
      targetPort: 8080
      port: 80              
  type: ClusterIP
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: uaa-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: uaa
  template:
       metadata:
         labels:
           app: uaa
       spec:
         containers:
         - name: uaa-container
           image: TEMPLATE_UAA_IMAGE
           ports:
             - containerPort: 8080  # servers REST port
               name: http
           volumeMounts:
              - name: uaa-config      # the volume specified below
                mountPath: /uaa       # path persistent volume gets mounted to
                readOnly: true 
         volumes:
           - name: uaa-config
             configMap:
               name: uaa-config
               items:
               - key: uaa.yml
                 path: uaa.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uaa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: TEMPLATE_ESP_NAMESPACE.TEMPLATE_ESP_DOMAIN
    http:
      paths:
      -  backend:
          serviceName: uaa-service # the service to hit
          servicePort: 80            # externally exposed port
         path: /uaa(/|$)(.*)
